--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "files.associations": {
-        "chrono": "cpp"
-    }
+        "chrono": "cpp",
+        "type_traits": "cpp"
+    },
+    "C_Cpp.default.cppStandard": "c++20"
 }
